# fact-fortress-compiler

./: .pdm-python  Makefile  README.md  duties.py  log.txt  noirgen.cli  pyproject.toml  run_performance.sh  stop_performance.sh  test.nr
circuits/average_dot_products/: Prover.toml  config.json
circuits/circuit_test/: Prover.toml
configurations/: average_dot_products.json  circuit_16_10010_50.json  circuit_16_10060_50.json  circuit_16_1010_50.json  circuit_16_10110_50.json  circuit_16_10210_50.json  circuit_16_10260_50.json  circuit_16_10360_50.json  circuit_16_10460_50.json  circuit_16_1060_50.json  circuit_16_10610_50.json  circuit_16_10_50.json  circuit_16_110_50.json  circuit_16_1110_50.json  circuit_16_1160_50.json  circuit_16_1210_50.json  circuit_16_1260_50.json  circuit_16_1310_50.json  circuit_16_1360_50.json  circuit_16_1410_50.json  circuit_16_1460_50.json  circuit_16_1510_50.json  circuit_16_1560_50.json  circuit_16_160_50.json  circuit_16_1610_50.json  circuit_16_1660_50.json  circuit_16_1710_50.json  circuit_16_1760_50.json  circuit_16_1810_50.json  circuit_16_1860_50.json  circuit_16_1910_50.json  circuit_16_1960_50.json  circuit_16_2010_50.json  circuit_16_2060_50.json  circuit_16_210_50.json  circuit_16_2110_50.json  circuit_16_2160_50.json  circuit_16_2210_50.json  circuit_16_2260_50.json  circuit_16_2310_50.json  (+180 more)
performance/: log.txt  times.json
results/: times-mac.json  times_1.json
src/: circuit_gen.py  cli.py  dot_product.py  example.py  gen_provenance.py  main.py  performance.py  sum_of_squares.py  weighted_average.py
(+1145 files in other folders)
