[tool.poetry]
name = "fact-fortress-circuits"
version = "0.1.0"
description = "Python library facilitate the generation of Zero-Knowledge Proof circuits in noir"
authors = ["pier <piergiuseppe.mallozzi@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
tomlkit = "^0.11.7"
requests = "^2.28.2"
toml = "^0.10.2"
psutil = "^5.9.5"
matplotlib = "^3.7.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
autoflake = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
